// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwapPreview.tsx > matches base snapshot, test trade exact input 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c9 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c7 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c8 {
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c10 {
  cursor: help;
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c1 {
  margin-top: 0px;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
      gap="sm"
    >
      <div
        class="c2"
        gap="lg"
      >
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c7 c8 css-142zc9n"
              >
                Sell
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="input-amount"
              >
                &lt;0.00001 ABC
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c9"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c7 c10 css-142zc9n"
                    cursor="help"
                  >
                    Buy
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="output-amount"
              >
                &lt;0.00001 DEF
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`SwapPreview.tsx > renders ETH input token for an ETH input UniswapX swap 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c9 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c7 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c8 {
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c10 {
  cursor: help;
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c1 {
  margin-top: 0px;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
      gap="sm"
    >
      <div
        class="c2"
        gap="lg"
      >
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c7 c8 css-142zc9n"
              >
                Sell
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="input-amount"
              >
                &lt;0.00001 ETH
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="eth-logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c9"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c7 c10 css-142zc9n"
                    cursor="help"
                  >
                    Buy
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="output-amount"
              >
                &lt;0.00001 DEF
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`SwapPreview.tsx > renders ETH input token for an ETH input UniswapX v2 swap 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c9 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c7 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c8 {
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c10 {
  cursor: help;
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c1 {
  margin-top: 0px;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
      gap="sm"
    >
      <div
        class="c2"
        gap="lg"
      >
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c7 c8 css-142zc9n"
              >
                Sell
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="input-amount"
              >
                &lt;0.00001 ETH
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="eth-logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c9"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c7 c10 css-142zc9n"
                    cursor="help"
                  >
                    Buy
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="output-amount"
              >
                &lt;0.00001 DEF
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`SwapPreview.tsx > renders preview trades with loading states 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c9 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c7 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c8 {
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c10 {
  cursor: help;
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c1 {
  margin-top: 0px;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
      gap="sm"
    >
      <div
        class="c2"
        gap="lg"
      >
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c7 c8 css-142zc9n"
              >
                Sell
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="input-amount"
              >
                &lt;0.00001 DEF
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c9"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c7 c10 css-142zc9n"
                    cursor="help"
                  >
                    Buy
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c6 css-15popx1"
                data-testid="output-amount"
              >
                &lt;0.00001 DEF
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`SwapPreview.tsx > test trade exact output, no recipient 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c9 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c7 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c8 {
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c10 {
  cursor: help;
  color: rgba(19, 19, 19, 0.63);
  margin-right: 8px;
}

.c1 {
  margin-top: 0px;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
      gap="sm"
    >
      <div
        class="c2"
        gap="lg"
      >
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c7 c8 css-142zc9n"
              >
                Sell
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="input-amount"
              >
                &lt;0.00001 ABC
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
        <div
          align="center"
          class="c3 c4"
          gap="md"
          justify="space-between"
        >
          <div
            class="c5"
            gap="xs"
          >
            <div
              class="c6 css-1urox24"
            >
              <div
                class="c9"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c7 c10 css-142zc9n"
                    cursor="help"
                  >
                    Buy
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c5"
              gap="xs"
            >
              <div
                class="c7 css-15popx1"
                data-testid="output-amount"
              >
                &lt;0.00001 GHI
              </div>
              <div
                class="c6 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
